--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,7 +91,7 @@ dependencies:
   charts_flutter: ^0.11.0
   #geocoder: 0.2.1
   #geohash: ^0.2.1
-  razorpay_flutter: ^1.2.7
+  #razorpay_flutter: ^1.2.7
   #snaplist: 0.1.8
   #lipsum: 1.0.1
   collection: ^1.15.0
