--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.iqonic.prokitflutter1</string>
+	<string>com.gaddielsoftware.cgeciacademy</string>
 	<key>PROJECT_ID</key>
 	<string>prokit-flutter</string>
 	<key>STORAGE_BUCKET</key>
