--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   geocoding: ^2.0.0
 
   # WEB TOOLS
-  webview_flutter: ^2.0.8
+  #webview_flutter: ^2.0.8
 
   # ADS
   google_mobile_ads: ^0.12.2
