--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,28 +50,28 @@ dependencies:
   google_mobile_ads: ^0.12.2
 
   # UI
-  simple_animations: ^3.1.1
+  # simple_animations: ^3.1.1
   flutter_svg: ^0.22.0
-  flutter_slidable: ^0.6.0
-  flutter_staggered_grid_view: ^0.4.0
-  flutter_staggered_animations: ^1.0.0
-  flutter_colorpicker: ^0.4.0
-  signature: ^4.1.1
+  # flutter_slidable: ^0.6.0
+  # flutter_staggered_grid_view: ^0.4.0
+  # flutter_staggered_animations: ^1.0.0
+  # flutter_colorpicker: ^0.4.0
+  # signature: ^4.1.1
   dots_indicator: ^2.0.0
   percent_indicator: ^3.0.1
-  flutter_rating_bar: ^4.0.0
+  # flutter_rating_bar: ^4.0.0
   carousel_slider: ^4.0.0
   animations: ^2.0.1
-  lottie: ^1.1.0
-  liquid_swipe: ^2.1.0
-  clippy_flutter: ^2.0.0-nullsafety.1
-  flutter_reaction_button: ^1.0.8
-  showcaseview: ^1.0.0
-  fl_chart: ^0.36.1
-  syncfusion_flutter_charts: ^19.1.67
+  # lottie: ^1.1.0
+  # liquid_swipe: ^2.1.0
+  # clippy_flutter: ^2.0.0-nullsafety.1
+  # flutter_reaction_button: ^1.0.8
+  # showcaseview: ^1.0.0
+  # fl_chart: ^0.36.1
+  # syncfusion_flutter_charts: ^19.1.67
 
   # VIDEOS
-  video_player: ^2.1.4
+  #video_player: ^2.1.4
 
   # NOTIFICATION
   flutter_local_notifications: ^5.0.0+4
