--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   google_fonts: ^2.1.0
 
   # Common
-  share: ^2.0.4
+  # share: ^2.0.4
   url_launcher: ^6.0.3
   http: ^0.13.3
   html: ^0.15.0
@@ -31,17 +31,17 @@ dependencies:
   card_swiper: ^1.0.2
 
   # AUTHENTICATION
-  google_sign_in: ^5.0.4
-  local_auth: ^1.1.6
+  # google_sign_in: ^5.0.4
+  # local_auth: ^1.1.6
 
   # STATE MANAGEMENT
   mobx: ^2.0.3
   flutter_mobx: ^2.0.1
 
   # MAP
-  google_maps_flutter: ^2.0.6
-  geolocator: ^7.3.1
-  geocoding: ^2.0.0
+  #google_maps_flutter: ^2.0.6
+  #geolocator: ^7.3.1
+  #geocoding: ^2.0.0
 
   # WEB TOOLS
   #webview_flutter: ^2.0.8
@@ -52,9 +52,9 @@ dependencies:
   # UI
   # simple_animations: ^3.1.1
   flutter_svg: ^0.22.0
-  # flutter_slidable: ^0.6.0
-  # flutter_staggered_grid_view: ^0.4.0
-  # flutter_staggered_animations: ^1.0.0
+  flutter_slidable: ^0.6.0
+  flutter_staggered_grid_view: ^0.4.0
+  flutter_staggered_animations: ^1.0.0
   # flutter_colorpicker: ^0.4.0
   # signature: ^4.1.1
   dots_indicator: ^2.0.0
