--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>ProKit Flutter</string>
+	<string>CGECI ACADEMY 2021</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -33,8 +33,24 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-1399327544318575~8667636001</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Prokit app requires access to the Camera to upload your photo.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Please authorize to use the app</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>ProKit app want to access your location</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Prokit wants to enable location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Prokit wants to enable location</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Prokit app requires access to the photo library to upload your photo.</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>This identifier will be used to deliver personalized ads to you.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -54,21 +70,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>GADApplicationIdentifier</key>
-	<string>ca-app-pub-1399327544318575~8667636001</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Prokit app requires access to the Camera to upload your photo.</string>
-	<key>NSFaceIDUsageDescription</key>
-	<string>Please authorize to use the app</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>ProKit app want to access your location</string>
-	<key>NSLocationUsageDescription</key>
-	<string>Prokit wants to enable location</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Prokit wants to enable location</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Prokit app requires access to the photo library to upload your photo.</string>
-	<key>NSUserTrackingUsageDescription</key>
-	<string>This identifier will be used to deliver personalized ads to you.</string>
 </dict>
 </plist>
