--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -17,6 +17,8 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
+	<string>$(FLUTTER_BUILD_NAME)</string>
+	<key>CFBundleVersion</key>
 	<string>1.0.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
@@ -31,8 +33,6 @@
 			</array>
 		</dict>
 	</array>
-	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-1399327544318575~8667636001</string>
 	<key>LSRequiresIPhoneOS</key>
