--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,9 @@ dependencies:
 
   # IMAGES
   cached_network_image: ^3.1.0
-  image_picker: ^0.8.1+3
-  file_picker: ^3.0.1
-  photo_view: ^0.12.0
+  #image_picker: ^0.8.1+3
+  #file_picker: ^3.0.1
+  #photo_view: ^0.12.0
   card_swiper: ^1.0.2
 
   # AUTHENTICATION
@@ -74,7 +74,7 @@ dependencies:
   #video_player: ^2.1.4
 
   # NOTIFICATION
-  flutter_local_notifications: ^5.0.0+4
+  #flutter_local_notifications: ^5.0.0+4
 
   #Dimond kit
   sleek_circular_slider: ^2.0.0
@@ -82,13 +82,13 @@ dependencies:
 
   # Cloud Storage #
   expandable_bottom_sheet: ^1.0.0+2
-  multi_image_picker: ^4.8.00
+  #multi_image_picker: ^4.8.00
 
   #clustering_google_maps: ^0.1.2
   #image_picker_gallery_camera: 0.1.6
 
   #Temporary  disable duo to late of null safety
-  charts_flutter: ^0.11.0
+  #charts_flutter: ^0.11.0
   #geocoder: 0.2.1
   #geohash: ^0.2.1
   #razorpay_flutter: ^1.2.7
