--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cgeci
 description: CGECI ACADEMY.
-version: 2.0.5+4
+version: 2.0.6+5
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -44,7 +44,7 @@ dependencies:
   #geocoding: ^2.0.0
 
   # WEB TOOLS
-  #webview_flutter: ^2.0.8
+  webview_flutter: ^2.0.8
 
   # ADS
   google_mobile_ads: ^0.12.2
